--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.11",
+    "apollo-link-context": "^1.0.20",
+    "formik": "^2.2.6",
+    "graphql": "^15.5.0",
     "next": "10.0.8",
+    "node-fetch": "^2.6.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-select": "^4.3.0",
+    "recharts": "^2.0.9",
+    "sweetalert2": "^10.15.5",
+    "yup": "^0.32.9"
   }
 }
